src/objects/Intake__c.object
<CustomObject>
    <fields>
        <fullName>Adult1_First_Name__c</fullName>
        <label>Adult 1 First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adult_1_Last_Name__c</fullName>
        <label>Adult 1 Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adult_1_Middle_Name__c</fullName>
        <label>Adult 1 Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adult_1_Primary_Insurance__c</fullName>
        <label>Adult 1 Primary Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>HIP</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>TRICARE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adult_1_Secondary_Insurance__c</fullName>
        <label>Adult 1 Secondary Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>HIP</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>TRICARE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adult_1_marital_Status__c</fullName>
        <label>Adult 1 marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marital_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adult_2_Position__c</fullName>
        <label>Adult 2 Position</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_Alcohol_after_known_Pregnancy__c</fullName>
        <label>Any Alcohol after Pregnancy Known</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_Complication_during_Pregnancy__c</fullName>
        <label>Any Complications during Pregnancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_Open_OnGoing_Case_with_DCS__c</fullName>
        <inlineHelpText>Children and families for whom DCS does not currently have an open, on-going case is eligible for Community partner Services.</inlineHelpText>
        <label>Any Open/OnGoing Case with DCS?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_Unit_Rate_For__c</fullName>
        <label>Apply Unit Rate For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>XYZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Status__c</fullName>
        <label>Assessment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthRepDOB__c</fullName>
        <label>AuthRepDOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AuthRepFirstName__c</fullName>
        <label>AuthRepFirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthRepLastName__c</fullName>
        <label>AuthRepLastName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ave_Mon__c</fullName>
        <label>Ave Monthly Support</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Education_hours_Per_week__c</fullName>
        <label>Average Education hours Per week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Hours_Per_Week__c</fullName>
        <label>Average Hours Per Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Unpaid_hours_Childcare__c</fullName>
        <label>Average Unpaid hours Childcare</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_10_Bonding_Attachment__c</fullName>
        <label>10. Bonding Attachment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_10_Unknown_Incomplete__c</fullName>
        <label>10. Unknown / Incomplete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unknown_Incomplete</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_10a__c</fullName>
        <label>10a</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baby Unwanted / Too Overwhelming</fullName>
                </value>
                <value>
                    <fullName>Medical Problems / Abnormalities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_1_Unknown_Incomplete__c</fullName>
        <label>1. Unknown / Incomplete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_2_Unknown_Incomplete__c</fullName>
        <label>2. Unknown / Incomplete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unknown_Incomplete</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_2a_Multi_Select_Criminal__c</fullName>
        <label>2a</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Criminal</fullName>
                </value>
                <value>
                    <fullName>Sustance Abuse</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_3a__c</fullName>
        <label>3a.</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Experience with Children</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_4_Coping_Skills_and_Support_System__c</fullName>
        <label>4. Coping Skills and Support System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_5_Stresses__c</fullName>
        <label>5. Stresses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_5a__c</fullName>
        <label>5a</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Relationships</fullName>
                </value>
                <value>
                    <fullName>Finances</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_6A_Multi_Select__c</fullName>
        <label>6A</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hurts People</fullName>
                </value>
                <value>
                    <fullName>Causes Fear</fullName>
                </value>
                <value>
                    <fullName>Afraid</fullName>
                </value>
                <value>
                    <fullName>Police</fullName>
                </value>
                <value>
                    <fullName>IPV</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Refuse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_6_Anger_Management__c</fullName>
        <label>6. Anger Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_7_Exp_of_Infant_Dev_and_Behavior__c</fullName>
        <label>7. Exp. of Infant Dev. and Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_8_Plans_for_Discipline__c</fullName>
        <label>8. Plans for Discipline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_8a_Plan_to_use_Physical_Punishment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>8a Plan to use Physical Punishment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_9_Perception_of_New_Infant__c</fullName>
        <label>9. Perception of New Infant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_9_Unknown_Incomlete__c</fullName>
        <label>9. Unknown / Incomlete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unknown_Incomplete</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRI_Adullt_2_Average_hours_per_week__c</fullName>
        <label>Adullt 2 Average hours per week</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Address__c</fullName>
        <label>Adult 2 Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Aver_Unpaid_Hours_Childcare__c</fullName>
        <label>Adult 2 Average Unpaid Hours Childcare</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Avg_Education_hrs_per_week__c</fullName>
        <label>Adult 2 Avg Education hrs per week</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_City__c</fullName>
        <label>Adult 2 City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Date_Of_Birth__c</fullName>
        <label>Adult 2 Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Education_Level__c</fullName>
        <label>Adult 2 Education Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Education</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Employer__c</fullName>
        <label>Adult 2 Employer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Employment_Status__c</fullName>
        <label>Adult 2 Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part Time</fullName>
                </value>
                <value>
                    <fullName>Maternity  leave, unpaid, full time</fullName>
                </value>
                <value>
                    <fullName>Maternity  leave, unpaid, part time</fullName>
                </value>
                <value>
                    <fullName>Maternity leave, paid, full time</fullName>
                </value>
                <value>
                    <fullName>Permanent Disability</fullName>
                </value>
                <value>
                    <fullName>Temporary Disability</fullName>
                </value>
                <value>
                    <fullName>Unemployed Not Seeking Work-Barriers</fullName>
                </value>
                <value>
                    <fullName>Unemployed Not Seeking Work-Preference</fullName>
                </value>
                <value>
                    <fullName>Unemployed Not Seeking Work-Teen Caregiver</fullName>
                </value>
                <value>
                    <fullName>Unemployed Seeking Work</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Enrolled_In_School__c</fullName>
        <label>Adult 2 Enrolled In School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>College 2 Year</fullName>
                </value>
                <value>
                    <fullName>College 4 Year</fullName>
                </value>
                <value>
                    <fullName>ESL</fullName>
                </value>
                <value>
                    <fullName>GED Program</fullName>
                </value>
                <value>
                    <fullName>Graduate School</fullName>
                </value>
                <value>
                    <fullName>High/Middle School</fullName>
                </value>
                <value>
                    <fullName>Not Enrolled in School</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Vocational College</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Ethnicity__c</fullName>
        <label>Adult 2 Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_First_Name__c</fullName>
        <label>Adult 2 First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Gender__c</fullName>
        <label>Adult 2 Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Involvement_Status__c</fullName>
        <label>Adult 2 Involvement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Involved</fullName>
                </value>
                <value>
                    <fullName>Not Involved</fullName>
                </value>
                <value>
                    <fullName>Cohabitating</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Language__c</fullName>
        <label>Adult 2 Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Last_Name__c</fullName>
        <label>Adult 2 Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Marital_Status__c</fullName>
        <label>Adult 2 Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marital_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Middle_Name__c</fullName>
        <label>Adult 2 Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Phone_Type__c</fullName>
        <label>Adult 2 Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Phone__c</fullName>
        <label>Adult 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Primary_Insurance__c</fullName>
        <label>Adult 2 Primary Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>HIP</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>TRICARE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Relationship_to_Target_Child__c</fullName>
        <label>Adult 2 Relationship to Target Child</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FOB</fullName>
                </value>
                <value>
                    <fullName>Grandfather</fullName>
                </value>
                <value>
                    <fullName>Grandmother</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>MOB</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Secondary_Insurance__c</fullName>
        <label>Adult 2 Secondary Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>HIP</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>TRICARE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Social_Security_Number__c</fullName>
        <label>Adult 2 Social Security Number</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>BRI_Adult_2_Zipcode__c</fullName>
        <label>Adult 2 Zipcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Archive__c</fullName>
        <label>Archive</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Assessment_Done__c</fullName>
        <label>Assessment Done</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Within Two Week Window</fullName>
                </value>
                <value>
                    <fullName>Not within Two Week Window</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Assessment_Duration__c</fullName>
        <label>Assessment Duration</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Assessment_Time__c</fullName>
        <label>Assessment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Attempted_Abortion__c</fullName>
        <label>Attempted Abortion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Birth_Status__c</fullName>
        <label>Birth Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Birth</fullName>
                </value>
                <value>
                    <fullName>Not First Birth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_CFN__c</fullName>
        <label>CFN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_Referral_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Source</label>
        <referenceTo>Provider__c</referenceTo>
        <relationshipLabel>CPCS Referrals</relationshipLabel>
        <relationshipName>CPCSReferral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_Referral_Type__c</fullName>
        <label>Referral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult Probation</fullName>
                </value>
                <value>
                    <fullName>Community Agency</fullName>
                </value>
                <value>
                    <fullName>Department of Child Services</fullName>
                </value>
                <value>
                    <fullName>Faith Based Organization</fullName>
                </value>
                <value>
                    <fullName>Family / Neighbor</fullName>
                </value>
                <value>
                    <fullName>Healthy Families</fullName>
                </value>
                <value>
                    <fullName>Juvenile Probation</fullName>
                </value>
                <value>
                    <fullName>Legal System</fullName>
                </value>
                <value>
                    <fullName>Medical System</fullName>
                </value>
                <value>
                    <fullName>Mental Health Center</fullName>
                </value>
                <value>
                    <fullName>Other CPCS Region</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Self</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_CPN__c</fullName>
        <label>CPN</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Child_Active_Inactive__c</fullName>
        <label>Child Active/ Inactive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Client__c</fullName>
        <label>Client</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Clinical_High_Risk_Date__c</fullName>
        <label>Clinical High Risk Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Clinical_High_Risk__c</fullName>
        <label>Clinical High Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Clinical_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinical Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Complete__c</fullName>
        <label>Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Consent_for_SSN_Date__c</fullName>
        <label>Consent for SSN Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Intakes (County)</relationshipLabel>
        <relationshipName>Intakes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Create_Household_And_Persons__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Household And Persons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Current_Family_Level__c</fullName>
        <label>Current Family Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>1C</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>SS</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>X1</fullName>
                </value>
                <value>
                    <fullName>X2</fullName>
                </value>
                <value>
                    <fullName>X3</fullName>
                </value>
                <value>
                    <fullName>UE</fullName>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>1 B</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Date_Consent_For_Service_Signed__c</fullName>
        <label>Date Consent For Service Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Date_Reviewed__c</fullName>
        <label>Date Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Disposition_After_Assessment__c</fullName>
        <label>Disposition After Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed to Further Contact</fullName>
                </value>
                <value>
                    <fullName>Not Offered Further Contact</fullName>
                </value>
                <value>
                    <fullName>Refused Further Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>